issue1 successfully implemented the compact format